force-app/main/default/objects/WorkOrder/fields/Abracadeiras_dos_Eletrodutos_instaladas__c.field-meta.xml
<CustomField>
    <fullName>Abracadeiras_dos_Eletrodutos_instaladas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Abraçadeiras dos Eletrodutos instaladas?&quot;, sim ou não.</description>
    <label>Abraçadeiras dos Eletrodutos instaladas?</label>
    <type>Checkbox</type>
</CustomField>