force-app/main/default/objects/WorkOrder/fields/Abracadeiras_estao_com_devidas_travas__c.field-meta.xml
<CustomField>
    <fullName>Abracadeiras_estao_com_devidas_travas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Abraçadeiras estão c/ as devidas travas?&quot;, sim ou não</description>
    <label>Abraçadeiras estão com devidas travas?</label>
    <type>Checkbox</type>
</CustomField>