force-app/main/default/objects/WorkOrder/fields/AbracadeixasCortadasCorretamente__c.field-meta.xml
<CustomField>
    <fullName>AbracadeixasCortadasCorretamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Abraçadeiras cortadas corretamente?&quot; sim ou não.</description>
    <label>Abraçadeiras cortadas corretamente?</label>
    <type>Checkbox</type>
</CustomField>