force-app/main/default/objects/WorkOrder/fields/Acabamentos__c.field-meta.xml
<CustomField>
    <fullName>Acabamentos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acabamentos</label>
    <type>Checkbox</type>
</CustomField>