force-app/main/default/objects/WorkOrder/fields/AdicionarArquivos1__c.field-meta.xml
<CustomField>
    <fullName>AdicionarArquivos1__c</fullName>
    <description>Campo para auxiliar o técnico quais imagens/vídeos adicionar em arquivos, viabilidade.</description>
    <formula>&quot; Foto do quadro de distribuição sem a tampa, &quot; &amp;
&quot; foto do disjuntor geral do quadro, &quot; &amp;
&quot; vídeo do caminho QDG ao inversor e &quot; &amp;
&quot; foto do gerador e das suas conexões a rede.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionar em arquivos</label>
    <type>Text</type>
</CustomField>