force-app/main/default/objects/WorkOrder/fields/AdicionarArquivos2__c.field-meta.xml
<CustomField>
    <fullName>AdicionarArquivos2__c</fullName>
    <description>Campo para auxilio do técnico sobre inserção de imagens e desenhos necessários, viabilidade.</description>
    <formula>&quot; Foto da localização do inversor, trafo acoplador (se houver) e do QDCA, &quot; &amp;
&quot; foto aterramento inversor e distância, &quot; &amp;
&quot; desenhar a localização dos equipamentos, bem como as distâncias que serão percorridas pelos cabos e inserir em arquivos. &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionar em arquivos</label>
    <type>Text</type>
</CustomField>