force-app/main/default/objects/WorkOrder/fields/AdicionarArquivos3__c.field-meta.xml
<CustomField>
    <fullName>AdicionarArquivos3__c</fullName>
    <description>Campo para auxilio do técnico sobre inserção de imagens e desenhos necessários, viabilidade.</description>
    <formula>&quot; Desenhar a localização dos equipamentos: inversor, padrão de entrada e QDG, &quot; &amp;
&quot; desenhar planta de cobertura com medidas, &quot; &amp;
&quot; desenhar obstáculos de sombreamento. &quot; &amp;
&quot; Observação: Inserir as imagens dos desenhos em arquivos.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionar em arquivos</label>
    <type>Text</type>
</CustomField>