force-app/main/default/objects/WorkOrder/fields/AdicionarArquivosFotoNumeroSerie__c.field-meta.xml
<CustomField>
    <fullName>AdicionarArquivosFotoNumeroSerie__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Foto do Número de série do inversor.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionar em arquivos</label>
    <type>Text</type>
</CustomField>