force-app/main/default/objects/WorkOrder/fields/AdicionarArquivosFotosAtividades__c.field-meta.xml
<CustomField>
    <fullName>AdicionarArquivosFotosAtividades__c</fullName>
    <description>Campo para informar quais arquivos são necessários.</description>
    <formula>&quot; Foto de cada atividade &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionar em arquivos</label>
    <type>Text</type>
</CustomField>