force-app/main/default/objects/WorkOrder/fields/AdicionarArquivosIntalacaoBateria__c.field-meta.xml
<CustomField>
    <fullName>AdicionarArquivosIntalacaoBateria__c</fullName>
    <description>Campo para auxiliar o técnico sobre o que deve ser anexado em arquivos.</description>
    <formula>&quot;  Fotos antes da instalação e fotos depois da instalação&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionar em arquivos</label>
    <type>Text</type>
</CustomField>