force-app/main/default/objects/WorkOrder/fields/AdicionarArquivosManuntencaoCorretiva__c.field-meta.xml
<CustomField>
    <fullName>AdicionarArquivosManuntencaoCorretiva__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Fotos em falha e fotos depois do ajuste&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionar em arquivos</label>
    <type>Text</type>
</CustomField>