force-app/main/default/objects/WorkOrder/fields/AlambradoSEfinalizado__c.field-meta.xml
<CustomField>
    <fullName>AlambradoSEfinalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Alambrado da SE está finalizado?&quot; sim ou não.</description>
    <label>Alambrado da SE está finalizado?</label>
    <type>Checkbox</type>
</CustomField>