force-app/main/default/objects/WorkOrder/fields/Altura1__c.field-meta.xml
<CustomField>
    <fullName>Altura1__c</fullName>
    <description>Campo para descrever a altura.</description>
    <label>Altura:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>