force-app/main/default/objects/WorkOrder/fields/ArvoresProximas__c.field-meta.xml
<CustomField>
    <fullName>ArvoresProximas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se existe árvores próximas.</description>
    <label>Árvores próximas:</label>
    <type>Checkbox</type>
</CustomField>