force-app/main/default/objects/WorkOrder/fields/Aterramento_dentro_da_base_concretada__c.field-meta.xml
<CustomField>
    <fullName>Aterramento_dentro_da_base_concretada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Aterramento dentro da base concretada?&quot; sim ou não.</description>
    <label>Aterramento dentro da base concretada?</label>
    <type>Checkbox</type>
</CustomField>