force-app/main/default/objects/WorkOrder/fields/AterramentoCercaConectado__c.field-meta.xml
<CustomField>
    <fullName>AterramentoCercaConectado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Aterramento da Cerca está conectado?&quot; sim ou não.</description>
    <label>Aterramento da Cerca está conectado?</label>
    <type>Checkbox</type>
</CustomField>