force-app/main/default/objects/WorkOrder/fields/AterramentoParaRaioRealizado__c.field-meta.xml
<CustomField>
    <fullName>AterramentoParaRaioRealizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Aterramento do para-raio está realizado?&quot; sim ou não.</description>
    <label>Aterramento do para-raio está realizado?</label>
    <type>Checkbox</type>
</CustomField>