force-app/main/default/objects/WorkOrder/fields/BasesPilaresEstaoConcretadas__c.field-meta.xml
<CustomField>
    <fullName>BasesPilaresEstaoConcretadas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Bases dos Pilares estão concretadas?&quot; sim ou não.</description>
    <label>Bases dos Pilares estão concretadas?</label>
    <type>Checkbox</type>
</CustomField>