force-app/main/default/objects/WorkOrder/fields/Bifasico__c.field-meta.xml
<CustomField>
    <fullName>Bifasico__c</fullName>
    <description>Campo para descrever o valor de voltagem do disjuntor.</description>
    <label>Bifásico:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>220/127V</fullName>
            </value>
            <value>
                <fullName>380/220V</fullName>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>