force-app/main/default/objects/WorkOrder/fields/BitolaCabeamentoCAConformeProjeto__c.field-meta.xml
<CustomField>
    <fullName>BitolaCabeamentoCAConformeProjeto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Bitola cabeamento CA conforme projeto?&quot; sim ou não.</description>
    <label>Bitola cabeamento CA conforme projeto?</label>
    <type>Checkbox</type>
</CustomField>