force-app/main/default/objects/WorkOrder/fields/BitolaCabosEntrada__c.field-meta.xml
<CustomField>
    <fullName>BitolaCabosEntrada__c</fullName>
    <description>Campo para descrever a bitola dos cabos entrada mm².</description>
    <label>Bitola dos cabos Entrada mm²:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>