force-app/main/default/objects/WorkOrder/fields/BitolaCabosRamalEntrada__c.field-meta.xml
<CustomField>
    <fullName>BitolaCabosRamalEntrada__c</fullName>
    <description>Campo para definir &quot;Bitola dos cabos do Ramal de Entrada mm²&quot;.</description>
    <label>Bitola dos cabos do Ramal de Entrada mm²</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>