force-app/main/default/objects/WorkOrder/fields/BitolaCabosRamalSaida__c.field-meta.xml
<CustomField>
    <fullName>BitolaCabosRamalSaida__c</fullName>
    <description>Campo para definir &quot;Bitola dos cabos do Ramal de Saída mm²&quot;.</description>
    <label>Bitola dos cabos do Ramal de Saída mm²</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>