force-app/main/default/objects/WorkOrder/fields/BitolaCabosSaida__c.field-meta.xml
<CustomField>
    <fullName>BitolaCabosSaida__c</fullName>
    <description>Campo para descrever a bitola dos cabos saída mm².</description>
    <label>Bitola dos cabos Saída mm²:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>