force-app/main/default/objects/WorkOrder/fields/BritaEstaEspalhadaSubestacao__c.field-meta.xml
<CustomField>
    <fullName>BritaEstaEspalhadaSubestacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Brita está espalhada na Subestação?&quot; sim ou não.</description>
    <label>Brita está espalhada na Subestação?</label>
    <type>Checkbox</type>
</CustomField>