force-app/main/default/objects/WorkOrder/fields/CabeamentoConectadoQGBT__c.field-meta.xml
<CustomField>
    <fullName>CabeamentoConectadoQGBT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cabeamento está Conectado no QGBT?&quot; sim ou não.</description>
    <label>Cabeamento está Conectado no QGBT?</label>
    <type>Checkbox</type>
</CustomField>