force-app/main/default/objects/WorkOrder/fields/Cabecote_no_eletroduto__c.field-meta.xml
<CustomField>
    <fullName>Cabecote_no_eletroduto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para confirmar se &quot;Há cabeçote no eletroduto?&quot;, sim ou não</description>
    <label>Há cabeçote no eletroduto?</label>
    <type>Checkbox</type>
</CustomField>