force-app/main/default/objects/WorkOrder/fields/CaboCCestaVisualmenteIntacto__c.field-meta.xml
<CustomField>
    <fullName>CaboCCestaVisualmenteIntacto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cabo CC está visualmente intacto?&quot; sim ou não.</description>
    <label>Cabo CC está visualmente intacto?</label>
    <type>Checkbox</type>
</CustomField>