force-app/main/default/objects/WorkOrder/fields/CaboCCfixadoAbracadeiraNylon__c.field-meta.xml
<CustomField>
    <fullName>CaboCCfixadoAbracadeiraNylon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cabo CC fixado c/ abraçadeira de Nylon?&quot; sim ou não.</description>
    <label>Cabo CC fixado c/ abraçadeira de Nylon?</label>
    <type>Checkbox</type>
</CustomField>