force-app/main/default/objects/WorkOrder/fields/CaboComunicacaoInstalado__c.field-meta.xml
<CustomField>
    <fullName>CaboComunicacaoInstalado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cabo de comunicação está instalado?&quot; sim ou não.</description>
    <label>Cabo de comunicação está instalado?</label>
    <type>Checkbox</type>
</CustomField>