force-app/main/default/objects/WorkOrder/fields/CaboConectadoDisjuntor__c.field-meta.xml
<CustomField>
    <fullName>CaboConectadoDisjuntor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cabo está conectado ao Disjuntor?&quot; sim ou não.</description>
    <label>Cabo está conectado ao Disjuntor?</label>
    <type>Checkbox</type>
</CustomField>