force-app/main/default/objects/WorkOrder/fields/CaboEstaCIdentificaCircuito__c.field-meta.xml
<CustomField>
    <fullName>CaboEstaCIdentificaCircuito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cabo está c/ identificação de circuito?&quot; sim ou não.</description>
    <label>Cabo está c/ identificação de circuito?</label>
    <type>Checkbox</type>
</CustomField>