force-app/main/default/objects/WorkOrder/fields/CabosCCsobModulosEstaoBemAlocados__c.field-meta.xml
<CustomField>
    <fullName>CabosCCsobModulosEstaoBemAlocados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cabos CC sob módulos estão bem alocados?&quot; sim ou não.</description>
    <label>Cabos CC sob módulos estão bem alocados?</label>
    <type>Checkbox</type>
</CustomField>