force-app/main/default/objects/WorkOrder/fields/CaixaDagua__c.field-meta.xml
<CustomField>
    <fullName>CaixaDagua__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se existe caixa dágua.</description>
    <label>Caixa dágua:</label>
    <type>Checkbox</type>
</CustomField>