force-app/main/default/objects/WorkOrder/fields/caixas_aterramento_niveladas_com_o_solo__c.field-meta.xml
<CustomField>
    <fullName>caixas_aterramento_niveladas_com_o_solo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Caixas de aterramento niveladas com o solo?&quot;, sim ou não.</description>
    <label>Caixas aterramento niveladas com o solo?</label>
    <type>Checkbox</type>
</CustomField>