force-app/main/default/objects/WorkOrder/fields/Caixas_de_inspecao__c.field-meta.xml
<CustomField>
    <fullName>Caixas_de_inspecao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Caixas de inspeção foram instaladas?&quot; sim ou não.</description>
    <label>Caixas de inspeção foram instaladas?</label>
    <type>Checkbox</type>
</CustomField>