force-app/main/default/objects/WorkOrder/fields/Caixas_de_passagem_estao_inteiras_tampa__c.field-meta.xml
<CustomField>
    <fullName>Caixas_de_passagem_estao_inteiras_tampa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cxs de passagem estão inteiras tampa?&quot; sim ou não.</description>
    <label>Caixas de passagem estão inteiras tampa?</label>
    <type>Checkbox</type>
</CustomField>