force-app/main/default/objects/WorkOrder/fields/Caixas_de_Passagem_instaladas__c.field-meta.xml
<CustomField>
    <fullName>Caixas_de_Passagem_instaladas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Caixas de Passagem instaladas?&quot; sim ou não.</description>
    <label>Caixas de Passagem instaladas?</label>
    <type>Checkbox</type>
</CustomField>