force-app/main/default/objects/WorkOrder/fields/CapacidadeBateriaTodoConjunto__c.field-meta.xml
<CustomField>
    <fullName>CapacidadeBateriaTodoConjunto__c</fullName>
    <description>Campo para definir Capacidade da bateria (todo conjunto).</description>
    <label>Capacidade da bateria (todo conjunto)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>