force-app/main/default/objects/WorkOrder/fields/Check_Code__c.field-meta.xml
<CustomField>
    <fullName>Check_Code__c</fullName>
    <label>Check Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>