force-app/main/default/objects/WorkOrder/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <description>Campo para obter a cidade da conta relacionada.</description>
    <formula>IF( Account.BillingCity  != null,  Account.BillingCity  ,   Account.ShippingCity  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>