force-app/main/default/objects/WorkOrder/fields/ClampsEstaoApertados__c.field-meta.xml
<CustomField>
    <fullName>ClampsEstaoApertados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Clamps estão apertados?&quot; sim ou não.</description>
    <label>Clamps estão apertados?</label>
    <type>Checkbox</type>
</CustomField>