force-app/main/default/objects/WorkOrder/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <description>Campo para comentários.</description>
    <label>Comentário:</label>
    <type>TextArea</type>
</CustomField>