force-app/main/default/objects/WorkOrder/fields/ComentariosOutroEquipamento__c.field-meta.xml
<CustomField>
    <fullName>ComentariosOutroEquipamento__c</fullName>
    <description>Campo para comentários necessários na seção outros equipamentos.</description>
    <label>Comentários:</label>
    <type>TextArea</type>
</CustomField>