force-app/main/default/objects/WorkOrder/fields/Comissionamento__c.field-meta.xml
<CustomField>
    <fullName>Comissionamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comissionamento</label>
    <type>Checkbox</type>
</CustomField>