force-app/main/default/objects/WorkOrder/fields/ComunicacaoBateriawifi__c.field-meta.xml
<CustomField>
    <fullName>ComunicacaoBateriawifi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se Foi feita comunicação da bateria com o wi-fi.</description>
    <label>Comunicação da bateria feita com wi-fi?</label>
    <type>Checkbox</type>
</CustomField>