force-app/main/default/objects/WorkOrder/fields/Concessionaria__c.field-meta.xml
<CustomField>
    <fullName>Concessionaria__c</fullName>
    <description>Campo para informar a  concessionária.</description>
    <label>Concessionária</label>
    <length>255</length>
    <type>Text</type>
</CustomField>