force-app/main/default/objects/WorkOrder/fields/Conecoes_CC__c.field-meta.xml
<CustomField>
    <fullName>Conecoes_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conexões CC</label>
    <type>Checkbox</type>
</CustomField>