force-app/main/default/objects/WorkOrder/fields/Conectores_Aterramento_prensados__c.field-meta.xml
<CustomField>
    <fullName>Conectores_Aterramento_prensados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definr se &quot;Conectores Aterramento prensados?&quot; sim ou não</description>
    <label>Conectores Aterramento prensados?</label>
    <type>Checkbox</type>
</CustomField>