force-app/main/default/objects/WorkOrder/fields/ConexaoEntreInversorQuadroFeita__c.field-meta.xml
<CustomField>
    <fullName>ConexaoEntreInversorQuadroFeita__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Conexão entre inversor e Quadro feita?&quot; sim ou não.</description>
    <label>Conexão entre inversor e Quadro feita?</label>
    <type>Checkbox</type>
</CustomField>