force-app/main/default/objects/WorkOrder/fields/ConexaoMC4estaoBemFeitas__c.field-meta.xml
<CustomField>
    <fullName>ConexaoMC4estaoBemFeitas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Conexão dos MC4 estão bem feitas?&quot; sim ou não.</description>
    <label>Conexão dos MC4 estão bem feitas?</label>
    <type>Checkbox</type>
</CustomField>