force-app/main/default/objects/WorkOrder/fields/Conexoes_CA__c.field-meta.xml
<CustomField>
    <fullName>Conexoes_CA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conexões CA</label>
    <type>Checkbox</type>
</CustomField>