force-app/main/default/objects/WorkOrder/fields/Conexoes_CC_new__c.field-meta.xml
<CustomField>
    <fullName>Conexoes_CC_new__c</fullName>
    <label>Conexões CC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Não informado</fullName>
                <isActive>false</isActive>
                <label>Não informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>