force-app/main/default/objects/WorkOrder/fields/ConexoesTrafoEstaoCorretas__c.field-meta.xml
<CustomField>
    <fullName>ConexoesTrafoEstaoCorretas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Conexões do Trafo estão corretas?&quot; sim ou não.</description>
    <label>Conexões do Trafo estão corretas?</label>
    <type>Checkbox</type>
</CustomField>