force-app/main/default/objects/WorkOrder/fields/Consultor__c.field-meta.xml
<CustomField>
    <fullName>Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para associar ordens de trabalhos ao consultor.</description>
    <label>Consultor</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>