force-app/main/default/objects/WorkOrder/fields/CoordenadasGPS__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasGPS__c</fullName>
    <description>Campo para definir as coordenadas GPS.</description>
    <label>Coordenadas GPS:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>