force-app/main/default/objects/WorkOrder/fields/Corrente_da_String_12__c.field-meta.xml
<CustomField>
    <fullName>Corrente_da_String_12__c</fullName>
    <label>Corrente da String 12</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>