force-app/main/default/objects/WorkOrder/fields/CorrenteDJ_QDG__c.field-meta.xml
<CustomField>
    <fullName>CorrenteDJ_QDG__c</fullName>
    <description>Campo para descrever a corrente do DJ do QDG.</description>
    <label>Corrente do DJ do QDG:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>