force-app/main/default/objects/WorkOrder/fields/CorrenteDJPadrao__c.field-meta.xml
<CustomField>
    <fullName>CorrenteDJPadrao__c</fullName>
    <description>Campo para definir a corrente do DJ do padrão.</description>
    <label>Corrente do DJ do Padrão:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>