force-app/main/default/objects/WorkOrder/fields/CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPF_CNPJ__c</fullName>
    <description>Campo para trazer os valores ou de CPF ou de CNPJ.</description>
    <formula>Account.SeCPFouCNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF / CNPJ</label>
    <type>Text</type>
</CustomField>