force-app/main/default/objects/WorkOrder/fields/Curva_de_Eletrocalha_instalada__c.field-meta.xml
<CustomField>
    <fullName>Curva_de_Eletrocalha_instalada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Curva de Eletrocalha instalada?&quot; sim ou não</description>
    <label>Curva de Eletrocalha instalada?</label>
    <type>Checkbox</type>
</CustomField>