force-app/main/default/objects/WorkOrder/fields/CxInspecaoAterramentoAparente__c.field-meta.xml
<CustomField>
    <fullName>CxInspecaoAterramentoAparente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Cx de Inspeção de aterramento aparente?&quot; sim ou não.</description>
    <label>Cx de Inspeção de aterramento aparente?</label>
    <type>Checkbox</type>
</CustomField>