force-app/main/default/objects/WorkOrder/fields/Dados_de_Inversores_Potencia__c.field-meta.xml
<CustomField>
    <fullName>Dados_de_Inversores_Potencia__c</fullName>
    <description>Campo para coletar a potência de dados de Inversores.</description>
    <label>Dados de Inversores Potência:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>