force-app/main/default/objects/WorkOrder/fields/Dados_de_Inversores_Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Dados_de_Inversores_Quantidade__c</fullName>
    <description>Campo para coletar a quantidade de dados de Inversores.</description>
    <label>Dados de Inversores Quantidade:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>