force-app/main/default/objects/WorkOrder/fields/Dados_de_Modulos_Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Dados_de_Modulos_Quantidade__c</fullName>
    <description>Campo para coletar quantidade de dados de Módulos</description>
    <label>Dados de Módulos Quantidade:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>