force-app/main/default/objects/WorkOrder/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Campo para definir a data.</description>
    <label>Data</label>
    <type>Date</type>
</CustomField>