force-app/main/default/objects/WorkOrder/fields/Data_do_Servico__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Servico__c</fullName>
    <label>Data do Serviço</label>
    <type>Date</type>
</CustomField>