force-app/main/default/objects/WorkOrder/fields/DataHoradaVisitaTecnica__c.field-meta.xml
<CustomField>
    <fullName>DataHoradaVisitaTecnica__c</fullName>
    <description>Campo para definir a data e a hora da visita técnica.</description>
    <label>Data e Hora da Visita Técnica:</label>
    <type>DateTime</type>
</CustomField>