force-app/main/default/objects/WorkOrder/fields/DataHoraQueEquipeChegou__c.field-meta.xml
<CustomField>
    <fullName>DataHoraQueEquipeChegou__c</fullName>
    <description>Campo para definir a Hora que a equipe chegou ao local.</description>
    <label>Data e Hora que a equipe chegou ao local</label>
    <type>DateTime</type>
</CustomField>