force-app/main/default/objects/WorkOrder/fields/DataLimpeza__c.field-meta.xml
<CustomField>
    <fullName>DataLimpeza__c</fullName>
    <description>Campo para definir a data da limpeza.</description>
    <label>Data da Limpeza</label>
    <type>Date</type>
</CustomField>