force-app/main/default/objects/WorkOrder/fields/DataRealizada3__c.field-meta.xml
<CustomField>
    <fullName>DataRealizada3__c</fullName>
    <description>Campo para definir a data realizada.</description>
    <label>Data Realizada</label>
    <type>Date</type>
</CustomField>