force-app/main/default/objects/WorkOrder/fields/DataVisita__c.field-meta.xml
<CustomField>
    <fullName>DataVisita__c</fullName>
    <description>Campo para definir a data da visita.</description>
    <label>Data da visita</label>
    <type>Date</type>
</CustomField>