force-app/main/default/objects/WorkOrder/fields/Descricao_dos_servicos__c.field-meta.xml
<CustomField>
    <fullName>Descricao_dos_servicos__c</fullName>
    <label>Descrição dos Serviços:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>