force-app/main/default/objects/WorkOrder/fields/DescricaoAtividade2__c.field-meta.xml
<CustomField>
    <fullName>DescricaoAtividade2__c</fullName>
    <description>Campo para exibir a descrição da atividade de &quot;INSPEÇÕES DE TORQUES&quot;.</description>
    <formula>&quot; INSPEÇÕES DE TORQUES :&quot; &amp;
&quot; Inspeção de torque de aperto dos parafusos e conexões nos inversores (CC e CA.), &quot; &amp;
&quot; inspeção de torque de aperto dos parafusos e conexões nos Quadro de proteção,  QDCA, &quot; &amp;
&quot; inspeção de torque de aperto dos parafusos e conexões no QGBT e clamps acessíveis. &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição da Atividade</label>
    <type>Text</type>
</CustomField>