force-app/main/default/objects/WorkOrder/fields/DescricaoAtividade3__c.field-meta.xml
<CustomField>
    <fullName>DescricaoAtividade3__c</fullName>
    <description>Campo para exibir a descrição da atividade de &quot;INSPEÇÕES DE TERMOGRAFICAS QUALITATIVAS&quot;.</description>
    <formula>&quot; INSPEÇÕES DE TERMOGRAFICAS QUALITATIVAS : &quot; &amp;
&quot; Módulos FV, conectores MC6 e cabos fotovoltaicos, &quot; &amp;
&quot; inversores e &quot; &amp;
&quot; QGBT (Disjuntores, barramentos e cabos).&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição da Atividade</label>
    <type>Text</type>
</CustomField>